--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -13,6 +13,7 @@
   justify-content: space-around;
   margin-bottom: 20rpx;
   margin-top: 20rpx;
+ 
 }
 
 .title .hello{
@@ -36,4 +37,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  background-color:#F8F8FF;
+}
+.all-artical .left-artical{
+  width: 350rpx;
 }
