--- a/pages/articledetial/detial.wxml
+++ b/pages/articledetial/detial.wxml
@@ -1,14 +1,14 @@
 <!--pages/articledetial/detial.wxml-->
 <view class="author">
   <view class="authorinfo">
-  <image src="{{articledetaile.author_avatarUrl}}"></image>
+    <image src="{{articledetaile.author_avatarUrl}}"></image>
     <view class="name">
       <view class="nickName">{{articledetaile.author_name}}</view>
       <view class="subTime">发布于 {{articledetaile.create_time}}</view>
     </view>
   </view>
 
-  <view>关注</view>
+  <view class="care">关注</view>
 </view>
 <view class="imageList"> 
   <image wx:for="{{articledetaile.imageList}}" src="{{item}}"></image>
@@ -18,12 +18,14 @@
   {{articledetaile.content}}
 </view>
 
-<view class="topic">
-  {{articledetaile.topic}}
+<view class="topic" wx:if="{{articledetaile.topic}}">
+  #
+  {{articledetaile.topic_title}}
 </view>
 
 <view class="watch">
   <view class="watch-counter">
+    <image src="/static/image/fire.jpg"></image>
     {{articledetaile.browse_count}}
   </view>
   <view class="mention_user">
