--- a/pages/articledetial/detial.wxss
+++ b/pages/articledetial/detial.wxss
@@ -1,1 +1,54 @@
 /* pages/articledetial/detial.wxss */
+.author{
+  display:flex;
+  flex-direction:row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20rpx;
+}
+
+.authorinfo image{
+  height: 100rpx;
+  width: 100rpx;
+  border-radius: 50rpx;
+}
+.authorinfo{
+  display: flex;
+  flex-direction: row;
+}
+.authorinfo .name{
+  display:flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 0 20rpx;
+}
+
+.author .care{
+  border: 2rpx solid aqua;
+  border-radius: 20rpx;
+  height: 50rpx;
+  width: 100rpx;
+  text-align:center;
+}
+.content{
+  margin: 20rpx;
+}
+.topic{
+   margin: 50rpx 20rpx;
+}
+.watch{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 20rpx 50rpx;
+}
+
+.watch .watch-counter image{
+  width: 25rpx;
+  height: 25rpx;
+}
+.watch .watch-counter{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
