--- a/pages/articledetial/detial.wxss
+++ b/pages/articledetial/detial.wxss
@@ -52,3 +52,106 @@
   flex-direction: column;
   align-items: center;
 }
+
+.comment_count{
+  margin: 20rpx;
+}
+
+.commentList image{
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 50rpx;
+  margin: 20rpx;
+}
+
+.commentList .boder{
+  height: 2rpx;
+  background-color: #bbb;
+}
+
+.commentList{
+  display: flex;
+  flex-direction: row;
+}
+
+.commentList .comment{
+  /* display: flex;
+  flex-direction: column; */
+  margin: 20rpx;
+  width: 600rpx;
+}
+.commentList .comment .comment_head{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+}
+.commentList .comment .comment_head .commentor_info{
+   display: flex;
+  flex-direction: column;
+}
+.commentList .comment .comment_head .operation{
+  display: flex;
+  flex-direction: row;
+}
+.commentList .comment .comment_head .operation image{
+  height: 20rpx;
+  width: 20rpx;
+}
+.comment_data{
+  font-size: 20rpx;
+}
+.commentList .operation{
+  font-size: 30rpx;
+}
+.replyList .comment{
+  display: flex;
+  flex-direction: column;
+  margin: 20rpx;
+  width: auto;
+}
+.replyList .comment .comment_head{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+}
+.replyList .comment .comment_head .commentor_info{
+  display: flex;
+  flex-direction: column;
+}
+.replyList .comment .comment_head .operation{
+  display: flex;
+  flex-direction: row;
+}
+.replyList .comment_head .commenter-avatarUrl{
+  display: felx;
+  flex-direction: row;
+  justify-content: space-around;
+  background-color: red;
+  margin-left:0; 
+}
+
+.replyList{
+  background-color: #808080;
+}
+
+.text-input{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+.text-input image{
+  height: 100rpx;
+  width: 100rpx;
+  border-radius: 50rpx;
+}
+
+.text-input input {
+  border: 1rpx solid #ddd;
+  background-color: #f5f5f5;
+  width: 575rpx;
+  padding: 10rpx;
+  border-radius: 20rpx;
+}
